--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "prepare": "husky install",
     "pre-commit": "lint-staged",
-    "start": "webpack-dev-server --mode development"
+    "start": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "lint-staged": {
     "tests/**/*.{js,jsx,ts,tsx,json,css,less,md}": [
@@ -47,7 +48,8 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.9.0"
   },
   "dependencies": {
     "d3": "^7.8.2"
